fix spacing

--- a/app/assets/styles/core/_home.scss
+++ b/app/assets/styles/core/_home.scss
@@ -5,7 +5,7 @@
 
 .overview-charts {
   box-shadow: inset 0 1px 0 0 $tertiary-color;
-  padding: ($global-spacing * 4) 0;
+  padding: ($global-spacing * 4) 0 ($global-spacing * 2) 0;
   @extend .clearfix;
   h3 {
     font-size: 1rem;
